--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,22 @@
 version: '3.8'
 
 services:
+  service:
+    build: .
+    restart: always
+  web:
+    image: caddy:2.6.4-alpine
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+      - "443:443/udp",
+    volumes:
+      - "./Caddyfile:/etc/caddy/Caddyfile"
   cache:
     image: redis:6.2-alpine
     restart: always
-    ports:
-      - '6379:6379'
-    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
+    command: redis-server --save 20 1 --loglevel warning --requirepass ${REDIS_PASS}
     volumes:
       - cache:/data
 
