--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "443:443/udp",
+      - "443:443/udp"
     volumes:
       - "./Caddyfile:/etc/caddy/Caddyfile"
   cache:
